Version 1.2
 - Power point buttons now -2, -4, and -6. Use the spinner arrows for adjustments of +/- 1
 - Ending the encounter and taking rests clear the roster selection
 - Initiative display has adjustable font size

Version 1.1.1 (29 February 2012)
 - .monster import does not show "Hit" line unless there is an "Attack" line

Version 1.1 (28 February 2012)
 - Statblock form fixes
 - Action and power point tracking

Version 1.0 (28 February 2012)
 - Initial release