@@ -73,6 +73,7 @@ public class Settings {
 		SETTINGS.setProperty("doPowerRecharge", Boolean.TRUE.toString());
 		SETTINGS.setProperty("doSavingThrows", Boolean.TRUE.toString());
 		SETTINGS.setProperty("fontSize", "x-large");
+		SETTINGS.setProperty("rest", "(none)");
 		SETTINGS.setProperty("useModRoles", Boolean.FALSE.toString());
 		SETTINGS.setProperty("workingDirectory", System.getProperty("user.dir"));
 	}
@@ -87,9 +88,10 @@ public class Settings {
 		init();
 		return Boolean.valueOf(SETTINGS.getProperty("useModRoles"));
 	}
-	
+
 	/**
 	 * Returns the font size for the initiative display.
+	 * 
 	 * @return the font size for the initiative display
 	 */
 	public static String getFontSize() {
@@ -99,7 +101,9 @@ public class Settings {
 
 	/**
 	 * Sets the font size for the initiative display
-	 * @param fontSize the font size
+	 * 
+	 * @param fontSize
+	 *            the font size
 	 */
 	public static void setFontSize(String fontSize) {
 		SETTINGS.setProperty("fontSize", fontSize);
@@ -171,6 +175,27 @@ public class Settings {
 	 */
 	public static void setDoPowerRecharge(Boolean value) {
 		SETTINGS.setProperty("doPowerRecharge", value.toString());
+	}
+
+	/**
+	 * Returns the stored type of rest previously taken.
+	 * 
+	 * @return the stored type of rest previously taken
+	 */
+	public static String getRest() {
+		init();
+		return SETTINGS.getProperty("rest");
+	}
+
+	/**
+	 * Stores the most recently taken rest for future reference.
+	 * 
+	 * @param rest
+	 *            a string describing the last rest taken, e.g.
+	 *            "Short Rest with Milestone", "Extended Rest"
+	 */
+	public static void setRest(String rest) {
+		SETTINGS.setProperty("rest", rest);
 	}
 
 	/**
